--- a/StarBucks/Base.lproj/Main.storyboard
+++ b/StarBucks/Base.lproj/Main.storyboard
@@ -41,39 +41,39 @@
                                 </connections>
                             </pickerView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KgL-hQ-40y">
-                                <rect key="frame" x="39" y="339" width="27" height="33"/>
+                                <rect key="frame" x="16" y="167" width="27" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="10.25" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="78g-Fb-mbH" userLabel="Money Label">
-                                <rect key="frame" x="62" y="345" width="83" height="21"/>
+                                <rect key="frame" x="39" y="173" width="83" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="299" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dZp-Lm-yMn">
-                                <rect key="frame" x="283" y="350" width="42" height="21"/>
+                                <rect key="frame" x="260" y="176" width="42" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="⭐︎" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OJI-AJ-M0A">
-                                <rect key="frame" x="317" y="349" width="42" height="21"/>
+                                <rect key="frame" x="294" y="175" width="42" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="test.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="ukg-HX-rLC">
-                                <rect key="frame" x="40" y="28" width="295" height="270"/>
+                                <rect key="frame" x="143" y="28" width="88" height="80"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="Hdu-zL-YlW">
-                                <rect key="frame" x="91" y="305" width="97" height="30"/>
+                                <rect key="frame" x="70" y="133" width="97" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -94,23 +94,38 @@
                                     <segment title="Tall"/>
                                     <segment title="Grande"/>
                                 </segments>
+                                <color key="tintColor" red="0.29915413899619897" green="0.67590235817928224" blue="0.99430948500000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <action selector="segmentValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="vmT-D5-5af"/>
                                 </connections>
                             </segmentedControl>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pBF-ee-NMM">
-                                <rect key="frame" x="203" y="305" width="122" height="30"/>
+                                <rect key="frame" x="182" y="133" width="122" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Reload amount"/>
                                 <connections>
                                     <action selector="reloadMoneyFromButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1J0-6O-dSO"/>
                                 </connections>
                             </button>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="2Lv-YR-52a">
+                                <rect key="frame" x="56" y="319" width="262" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="Scone"/>
+                                    <segment title="Maffin"/>
+                                    <segment title="Cookie"/>
+                                </segments>
+                                <color key="tintColor" red="0.99430948500000005" green="0.49894997221734677" blue="0.52573839608024031" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <action selector="segmentFoodChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="51C-mJ-sxn"/>
+                                </connections>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
                         <outlet property="amountPicker" destination="yNt-2J-w0A" id="l7G-TH-B8y"/>
+                        <outlet property="foodSegment" destination="2Lv-YR-52a" id="GMh-zX-Nlw"/>
                         <outlet property="moneyLabel" destination="78g-Fb-mbH" id="gIo-LD-dhw"/>
                         <outlet property="orderButton" destination="Aex-tC-q4z" id="qfa-jT-nLv"/>
                         <outlet property="reloadMoney" destination="Hdu-zL-YlW" id="vb8-SJ-saG"/>
